--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@ h1{
     font-weight: 500;
     letter-spacing: 2px;
 }
+.me{
+    text-align: center;
+    font-size: 25px;
+    border: 2px solid black;
+    border-radius: 25px;
+    align-items: center;
+    margin-top: 5px;
+    height: 150px;
+    width: 230px;
+}
+.me p{
+    text-decoration: underline;
+}
 .icon{
     margin: 20px;
     display: flex;
@@ -109,7 +122,9 @@ i{
     </div>
     <h1>UNDER CONSTRUCTION</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam animi tempore harum rerum quos architecto, ipsum ea quam esse vero magnam sapiente asperiores dolore hic obcaecati autem accusantium numquam aut.</p>
-<div class="icon">
+<div class="me">
+        <p>Contact me</p>
+    <div class="icon">
     <a href="https://www.facebook.com/aakriti.bhandari.98/"  target="_blank" >
         <i class="fab fa-facebook"></i>
     </a>
@@ -122,6 +137,7 @@ i{
     <a href="https://github.com/4akrit1"  target="_blank">
         <i class="fa fa-github"></i>
     </a>
+    </div>
 </div>
 </div>
 
